--- a/project-1/src/styles/Home.module.css
+++ b/project-1/src/styles/Home.module.css
@@ -156,6 +156,8 @@
   background-clip: content-box;
 }
 
+
+
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
   .card:hover {
@@ -280,4 +282,21 @@
   to {
     transform: rotate(0deg);
   }
+}
+
+
+.nav_menu{
+  padding: 30px 0;
+}
+
+.nav_menu ul{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+
+}
+
+.nav_menu ul li{
+  padding: 0 15px
 }
