--- a/project-1/src/styles/Home.module.css
+++ b/project-1/src/styles/Home.module.css
@@ -284,19 +284,7 @@
   }
 }
 
-
-.nav_menu{
-  padding: 30px 0;
+.img_sec{
+  padding: 20px 0;
 }
 
-.nav_menu ul{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  list-style: none;
-
-}
-
-.nav_menu ul li{
-  padding: 0 15px
-}
